Repaired problem of bootstap view on mobile web.

--- a/static/manager/css/common.css
+++ b/static/manager/css/common.css
@@ -7,7 +7,7 @@ header {
 
 .top {
     background: #d43f3a;
-    height: 50px;
+    /*height: 50px;*/
     font-size: 20px;
     color: #eee !important;
     text-align: center;
